Minor display tweaks

--- a/samples/colab_llama2_enforcer.ipynb
+++ b/samples/colab_llama2_enforcer.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,9 @@
     {
      "data": {
       "text/markdown": [
-       "```Please give me information about Michael Jordan. You MUST answer using the following json schema: {\"title\": \"AnswerFormat\", \"type\": \"object\", \"properties\": {\"first_name\": {\"title\": \"First Name\", \"type\": \"string\"}, \"last_name\": {\"title\": \"Last Name\", \"type\": \"string\"}, \"year_of_birth\": {\"title\": \"Year Of Birth\", \"type\": \"integer\"}, \"num_seasons_in_nba\": {\"title\": \"Num Seasons In Nba\", \"type\": \"integer\"}}, \"required\": [\"first_name\", \"last_name\", \"year_of_birth\", \"num_seasons_in_nba\"]}```"
+       "```\n",
+       "Please give me information about Michael Jordan. You MUST answer using the following json schema: {\"title\": \"AnswerFormat\", \"type\": \"object\", \"properties\": {\"first_name\": {\"title\": \"First Name\", \"type\": \"string\"}, \"last_name\": {\"title\": \"Last Name\", \"type\": \"string\"}, \"year_of_birth\": {\"title\": \"Year Of Birth\", \"type\": \"integer\"}, \"num_seasons_in_nba\": {\"title\": \"Num Seasons In Nba\", \"type\": \"integer\"}}, \"required\": [\"first_name\", \"last_name\", \"year_of_birth\", \"num_seasons_in_nba\"]}\n",
+       "```"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -231,7 +233,9 @@
     {
      "data": {
       "text/markdown": [
-       "```   { \"first_name\": \"Michael\", \"last_name\": \"Jordan\", \"year_of_birth\": 1963, \"num_seasons_in_nba\": 15 }```"
+       "```\n",
+       "   { \"first_name\": \"Michael\", \"last_name\": \"Jordan\", \"year_of_birth\": 1963, \"num_seasons_in_nba\": 15 }\n",
+       "```"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -255,7 +259,8 @@
     {
      "data": {
       "text/markdown": [
-       "```   Of course! I'd be happy to help you with information about Michael Jordan. Here is the information you requested, formatted according to the JSON schema you provided:\n",
+       "```\n",
+       "   Of course! I'd be happy to help you with your question about Michael Jordan. Here is the information you requested, formatted according to the JSON schema you provided:\n",
        "{\n",
        "\"title\": \"AnswerFormat\",\n",
        "\"type\": \"object\",\n",
@@ -263,10 +268,10 @@
        "\"first_name\": {\n",
        "\"title\": \"First Name\",\n",
        "\"type\": \"string\",\n",
-       "\"example\": \"Michael\"\n",
+       "\"description\": \"Michael Jordan's first name\"\n",
        "},\n",
        "\"last_name\": {\n",
-       "\"title\": \"Last```"
+       "```"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -284,7 +289,7 @@
     "    display(Markdown(f'**{text}**'))\n",
     "\n",
     "def display_content(text):\n",
-    "    display(Markdown(f'```{text}```'))\n",
+    "    display(Markdown(f'```\\n{text}\\n```'))\n",
     "\n",
     "DEFAULT_SYSTEM_PROMPT = \"\"\"\\\n",
     "You are a helpful, respectful and honest assistant. Always answer as helpfully as possible, while being safe.  Your answers should not include any harmful, unethical, racist, sexist, toxic, dangerous, or illegal content. Please ensure that your responses are socially unbiased and positive in nature.\\n\\nIf a question does not make any sense, or is not factually coherent, explain why instead of answering something not correct. If you don't know the answer to a question, please don't share false information.\\\n",
@@ -917,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -967,6 +972,15 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "----------------------------------------\n",
+      "\n"
+     ]
     },
     {
      "data": {
@@ -1276,8 +1290,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>T</td>\n",
-       "      <td>29911</td>\n",
+       "      <td>The</td>\n",
+       "      <td>1576</td>\n",
        "      <td>0.00000</td>\n",
        "      <td>▁</td>\n",
        "      <td>29871</td>\n",
@@ -1285,84 +1299,75 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>he</td>\n",
-       "      <td>354</td>\n",
-       "      <td>0.00000</td>\n",
-       "      <td>▁Thank</td>\n",
-       "      <td>3374</td>\n",
-       "      <td>0.59680</td>\n",
+       "      <td>▁answer</td>\n",
+       "      <td>1234</td>\n",
+       "      <td>0.23457</td>\n",
+       "      <td>▁question</td>\n",
+       "      <td>1139</td>\n",
+       "      <td>0.26999</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>▁answer</td>\n",
-       "      <td>1234</td>\n",
-       "      <td>0.30672</td>\n",
-       "      <td>▁answer</td>\n",
-       "      <td>1234</td>\n",
-       "      <td>0.30672</td>\n",
+       "      <td>▁is</td>\n",
+       "      <td>338</td>\n",
+       "      <td>0.03131</td>\n",
+       "      <td>▁to</td>\n",
+       "      <td>304</td>\n",
+       "      <td>0.92951</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>▁is</td>\n",
-       "      <td>338</td>\n",
-       "      <td>0.03013</td>\n",
-       "      <td>▁to</td>\n",
-       "      <td>304</td>\n",
-       "      <td>0.93718</td>\n",
+       "      <td>▁</td>\n",
+       "      <td>29871</td>\n",
+       "      <td>0.59562</td>\n",
+       "      <td>▁</td>\n",
+       "      <td>29871</td>\n",
+       "      <td>0.59562</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>▁</td>\n",
-       "      <td>29871</td>\n",
-       "      <td>0.68133</td>\n",
-       "      <td>▁</td>\n",
-       "      <td>29871</td>\n",
-       "      <td>0.68133</td>\n",
+       "      <td>1</td>\n",
+       "      <td>29896</td>\n",
+       "      <td>0.97437</td>\n",
+       "      <td>1</td>\n",
+       "      <td>29896</td>\n",
+       "      <td>0.97437</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>1</td>\n",
-       "      <td>29896</td>\n",
-       "      <td>0.84833</td>\n",
-       "      <td>1</td>\n",
-       "      <td>29896</td>\n",
-       "      <td>0.84833</td>\n",
+       "      <td>9</td>\n",
+       "      <td>29929</td>\n",
+       "      <td>0.99911</td>\n",
+       "      <td>9</td>\n",
+       "      <td>29929</td>\n",
+       "      <td>0.99911</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>9</td>\n",
-       "      <td>29929</td>\n",
-       "      <td>0.99649</td>\n",
-       "      <td>9</td>\n",
-       "      <td>29929</td>\n",
-       "      <td>0.99649</td>\n",
+       "      <td>6</td>\n",
+       "      <td>29953</td>\n",
+       "      <td>0.99843</td>\n",
+       "      <td>6</td>\n",
+       "      <td>29953</td>\n",
+       "      <td>0.99843</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>6</td>\n",
-       "      <td>29953</td>\n",
-       "      <td>0.99614</td>\n",
-       "      <td>6</td>\n",
-       "      <td>29953</td>\n",
-       "      <td>0.99614</td>\n",
+       "      <td>3</td>\n",
+       "      <td>29941</td>\n",
+       "      <td>0.99771</td>\n",
+       "      <td>3</td>\n",
+       "      <td>29941</td>\n",
+       "      <td>0.99771</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>3</td>\n",
-       "      <td>29941</td>\n",
-       "      <td>0.99675</td>\n",
-       "      <td>3</td>\n",
-       "      <td>29941</td>\n",
-       "      <td>0.99675</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
        "      <td>&lt;/s&gt;</td>\n",
        "      <td>2</td>\n",
-       "      <td>0.01961</td>\n",
+       "      <td>0.00544</td>\n",
        "      <td>.</td>\n",
        "      <td>29889</td>\n",
-       "      <td>0.95981</td>\n",
+       "      <td>0.98834</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1370,16 +1375,15 @@
       ],
       "text/plain": [
        "  generated_token  generated_token_idx  generated_score leading_token  leading_token_idx  leading_score\n",
-       "0               T                29911          0.00000             ▁              29871        0.99998\n",
-       "1              he                  354          0.00000        ▁Thank               3374        0.59680\n",
-       "2         ▁answer                 1234          0.30672       ▁answer               1234        0.30672\n",
-       "3             ▁is                  338          0.03013           ▁to                304        0.93718\n",
-       "4               ▁                29871          0.68133             ▁              29871        0.68133\n",
-       "5               1                29896          0.84833             1              29896        0.84833\n",
-       "6               9                29929          0.99649             9              29929        0.99649\n",
-       "7               6                29953          0.99614             6              29953        0.99614\n",
-       "8               3                29941          0.99675             3              29941        0.99675\n",
-       "9            </s>                    2          0.01961             .              29889        0.95981"
+       "0             The                 1576          0.00000             ▁              29871        0.99998\n",
+       "1         ▁answer                 1234          0.23457     ▁question               1139        0.26999\n",
+       "2             ▁is                  338          0.03131           ▁to                304        0.92951\n",
+       "3               ▁                29871          0.59562             ▁              29871        0.59562\n",
+       "4               1                29896          0.97437             1              29896        0.97437\n",
+       "5               9                29929          0.99911             9              29929        0.99911\n",
+       "6               6                29953          0.99843             6              29953        0.99843\n",
+       "7               3                29941          0.99771             3              29941        0.99771\n",
+       "8            </s>                    2          0.00544             .              29889        0.98834"
       ]
      },
      "metadata": {},
@@ -1403,6 +1407,7 @@
     "result, _ = run(question, system_prompt=DEFAULT_SYSTEM_PROMPT, max_new_tokens=DEFAULT_MAX_NEW_TOKENS)\n",
     "display_content(result)\n",
     "\n",
+    "print('\\n----------------------------------------\\n')\n",
     "\n",
     "display_header(f\"With regex force. Regex: {integer_regex}\")\n",
     "result, enforced_scores = run(question, system_prompt=DEFAULT_SYSTEM_PROMPT, max_new_tokens=DEFAULT_MAX_NEW_TOKENS, required_regex=integer_regex)\n",
