Adding several safety mesaures required for robust batching support

--- a/samples/colab_llama2_enforcer.ipynb
+++ b/samples/colab_llama2_enforcer.ipynb
@@ -32,15 +32,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install transformers torch lm-format-enforcer huggingface_hub accelerate bitsandbytes cpm_kernels\n",
-    "!huggingface-cli login\n",
+    "# !pip install transformers torch lm-format-enforcer huggingface_hub accelerate bitsandbytes cpm_kernels\n",
+    "# !huggingface-cli login\n",
     "\n",
     "# When running from source / developing the library, use this instead\n",
-    "# %load_ext autoreload\n",
-    "# %autoreload 2\n",
-    "# import sys\n",
-    "# import os\n",
-    "# sys.path.append(os.path.abspath('..'))\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "import sys\n",
+    "import os\n",
+    "sys.path.append(os.path.abspath('..'))\n",
     "# os.environ['CUDA_LAUNCH_BLOCKING'] = '1'"
    ]
   },
@@ -55,7 +55,15 @@
      "text": [
       "/home/noamgat/mambaforge/envs/commentranker/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Loading checkpoint shards: 100%|██████████| 2/2 [03:38<00:00, 109.16s/it]\n"
+      "Loading checkpoint shards: 100%|██████████| 2/2 [03:44<00:00, 112.07s/it]\n",
+      "Using pad_token, but it is not set yet.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OK\n"
      ]
     }
    ],
@@ -79,7 +87,9 @@
     "else:\n",
     "    raise Exception('GPU not available')\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
-    "tokenizer.pad_token = tokenizer.eos_token  # Required for batching example\n"
+    "if tokenizer.pad_token is None:\n",
+    "    # Required for batching example\n",
+    "    tokenizer.pad_token = tokenizer.eos_token  \n"
    ]
   },
   {
@@ -216,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -282,6 +292,35 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/markdown": [
+       "```\n",
+       "   Of course, I'd be happy to provide information about Michael Jordan using the provided JSON schema. Here's the response:\n",
+       "{\n",
+       "\"title\": \"AnswerFormat\",\n",
+       "\"type\": \"object\",\n",
+       "\"properties\": {\n",
+       "\"first_name\": {\n",
+       "\"title\": \"First Name\",\n",
+       "\"type\": \"string\",\n",
+       "\"required\": true\n",
+       "\n",
+       "},\n",
+       "\"last_name\": {\n",
+       "\n",
+       "\"title\": \"Last Name\",\n",
+       "\n",
+       "\"type\":\n",
+       "```"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -299,9 +338,6 @@
     "You are a helpful, respectful and honest assistant. Always answer as helpfully as possible, while being safe.  Your answers should not include any harmful, unethical, racist, sexist, toxic, dangerous, or illegal content. Please ensure that your responses are socially unbiased and positive in nature.\\n\\nIf a question does not make any sense, or is not factually coherent, explain why instead of answering something not correct. If you don't know the answer to a question, please don't share false information.\\\n",
     "\"\"\"\n",
     "DEFAULT_MAX_NEW_TOKENS = 100\n",
-    "NUM_BEAMS = 5\n",
-    "floating_point_regex = 'Michael Jordan was Born in (\\d)+(.\\d+)?'\n",
-    "integer_regex = ' Michael Jordan was Born in (\\d)+.'\n",
     "\n",
     "class AnswerFormat(BaseModel):\n",
     "    first_name: str\n",
@@ -336,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1448,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
