Returning COLAB notebook to online-ready mode

--- a/samples/colab_llama2_enforcer.ipynb
+++ b/samples/colab_llama2_enforcer.ipynb
@@ -32,15 +32,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install transformers torch lm-format-enforcer huggingface_hub accelerate bitsandbytes cpm_kernels\n",
-    "# !huggingface-cli login\n",
+    "!pip install transformers torch lm-format-enforcer huggingface_hub accelerate bitsandbytes cpm_kernels\n",
+    "!huggingface-cli login\n",
     "\n",
     "# When running from source / developing the library, use this instead\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "import sys\n",
-    "import os\n",
-    "sys.path.append(os.path.abspath('..'))\n",
+    "# %load_ext autoreload\n",
+    "# %autoreload 2\n",
+    "# import sys\n",
+    "# import os\n",
+    "# sys.path.append(os.path.abspath('..'))\n",
     "# os.environ['CUDA_LAUNCH_BLOCKING'] = '1'"
    ]
   },
