Refactored TokenEnforcer + TokenizerPrefixTree to be library-agnostic, moved all of the pytorch / transformers related code to transformerenforcer.py

--- a/samples/colab_llama2_enforcer.ipynb
+++ b/samples/colab_llama2_enforcer.ipynb
@@ -41,7 +41,7 @@
     "# import sys\n",
     "# import os\n",
     "# sys.path.append(os.path.abspath('..'))\n",
-    "# os.environ['CUDA_LAUNCH_BLOCKING'] = '1'"
+    "## os.environ['CUDA_LAUNCH_BLOCKING'] = '1'"
    ]
   },
   {
@@ -55,15 +55,8 @@
      "text": [
       "/home/noamgat/mambaforge/envs/commentranker/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Loading checkpoint shards: 100%|██████████| 2/2 [03:44<00:00, 112.07s/it]\n",
+      "Loading checkpoint shards: 100%|██████████| 2/2 [05:29<00:00, 164.58s/it]\n",
       "Using pad_token, but it is not set yet.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "OK\n"
      ]
     }
    ],
@@ -136,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -226,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -297,22 +290,14 @@
      "data": {
       "text/markdown": [
        "```\n",
-       "   Of course, I'd be happy to provide information about Michael Jordan using the provided JSON schema. Here's the response:\n",
+       "   Of course! I'd be happy to provide information about Michael Jordan using the provided JSON schema.\n",
        "{\n",
        "\"title\": \"AnswerFormat\",\n",
        "\"type\": \"object\",\n",
        "\"properties\": {\n",
-       "\"first_name\": {\n",
-       "\"title\": \"First Name\",\n",
-       "\"type\": \"string\",\n",
-       "\"required\": true\n",
-       "\n",
-       "},\n",
-       "\"last_name\": {\n",
-       "\n",
-       "\"title\": \"Last Name\",\n",
-       "\n",
-       "\"type\":\n",
+       "\"first_name\": {\"title\": \"First Name\", \"type\": \"string\"},\n",
+       "\"last_name\": {\"title\": \"Last Name\", \"type\": \"string\"},\n",
+       "\"year_of_birth\": {\"title\": \"Year Of Birth\", \"\n",
        "```"
       ],
       "text/plain": [
@@ -372,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -961,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +991,7 @@
      "data": {
       "text/markdown": [
        "```\n",
-       "   Thank you for your question! Michael Jordan was born in the year 1963.\n",
+       "   Thank you for asking! Michael Jordan was born in the year 1963.\n",
        "```"
       ],
       "text/plain": [
@@ -1484,7 +1469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
