--- a/samples/colab_llama2_enforcer.ipynb
+++ b/samples/colab_llama2_enforcer.ipynb
@@ -1703,7 +1703,7 @@
     "7\t0\t29900\t0.03939\t1\t29896\t0.95441\n",
     "```\n",
     "\n",
-    "This is likely due to the prompt not emphasizing the format requirements enough, causing the LM to want to output the year first (1963 starts with 1). In the regex example, we add the ```In mm/dd/yyyy format, ``` prefix to the regex, making 0 a pretty confident leader in that case:\n",
+    "This is likely due to the prompt not emphasizing the format requirements enough, causing the LM to want to output the year first (1963 starts with 1). In the regex example, we add a ```In mm/dd/yyyy format, ``` prefix to the regex, making 0 a pretty confident leader in that case:\n",
     "\n",
     "```\n",
     "\tgenerated_token\tgenerated_token_idx\tgenerated_score\tleading_token\tleading_token_idx\tleading_score\n",
