vLLM notebook updates

--- a/samples/colab_vllm_integration.ipynb
+++ b/samples/colab_vllm_integration.ipynb
@@ -36,16 +36,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# !pip install vllm lm-format-enforcer\n",
-    "# !huggingface-cli login\n",
+    "!pip install vllm lm-format-enforcer\n",
+    "!huggingface-cli login\n",
     "\n",
     "# When running from source / developing the library, use this instead\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "import sys\n",
-    "import os\n",
-    "sys.path.append(os.path.abspath('..'))\n",
-    "# os.environ['CUDA_LAUNCH_BLOCKING'] = '1'"
+    "# %load_ext autoreload\n",
+    "# %autoreload 2\n",
+    "# import sys\n",
+    "# import os\n",
+    "# sys.path.append(os.path.abspath('..'))\n",
+    "## os.environ['CUDA_LAUNCH_BLOCKING'] = '1'"
    ]
   },
   {
