Adding an "Open in Colab" button to the beginning of the vLLM integration notebook

--- a/samples/colab_vllm_integration.ipynb
+++ b/samples/colab_vllm_integration.ipynb
@@ -6,6 +6,10 @@
    "source": [
     "# LM Format Enforcer Integration with vLLM\n",
     "\n",
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/noamgat/lm-format-enforcer/blob/main/samples/colab_vllm_integration.ipynb\">\n",
+    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>\n",
+    "\n",
     "This notebook shows how you can integrate with the vLLM library. vLLM does not currently have an API for token filtering, so we have to do some monkey patching to expose the functionality.\n",
     "\n",
     "## Setting up the COLAB runtime (user action required)\n",
